src/test/deca/context/valid/personalTests/unaryMinus.deca
// Test UNARYMINUS

{
    int a = -5;
    println(a);
    println(-a);
}