src/test/deca/context/invalid/personalTests/equal_incompatible2.deca
{
    boolean a = true;
    int i = 5;
    a =  i == true;
}